force-app/main/default/objects/Opportunity/fields/Agency_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Agency_Approval_Date__c</fullName>
    <label>Agency Approval Date</label>
    <type>Date</type>
</CustomField>