force-app/main/default/objects/Opportunity/fields/Approved_SOW__c.field-meta.xml
<CustomField>
    <fullName>Approved_SOW__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved SOW</label>
    <type>Checkbox</type>
</CustomField>