force-app/main/default/objects/Opportunity/fields/Aws_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Aws_File_Name__c</fullName>
    <label>Aws File Name</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>