force-app/main/default/objects/Opportunity/fields/BA_Attire__c.field-meta.xml
<CustomField>
    <fullName>BA_Attire__c</fullName>
    <label>BA Attire</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>