force-app/main/default/objects/Opportunity/fields/Billing_Address1__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address1__c</fullName>
    <label>Billing Address</label>
    <type>Address</type>
</CustomField>