force-app/main/default/objects/Opportunity/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <description>Customer&apos;s billing address information</description>
    <label>Billing Address</label>
    <type>TextArea</type>
</CustomField>