force-app/main/default/objects/Opportunity/fields/Billing_Contact_Email_PFA__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Email_PFA__c</fullName>
    <label>Billing Contact Email</label>
    <type>Email</type>
</CustomField>