force-app/main/default/objects/Opportunity/fields/Billing_Contact_Name_PFA__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Name_PFA__c</fullName>
    <label>Billing Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>