force-app/main/default/objects/Opportunity/fields/Billing_Contact_Phone_PFA__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Phone_PFA__c</fullName>
    <label>Billing Contact Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>