force-app/main/default/objects/Opportunity/fields/Campaign_POC__c.field-meta.xml
<CustomField>
    <fullName>Campaign_POC__c</fullName>
    <label>Campaign POC</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>