force-app/main/default/objects/Opportunity/fields/Campaign_POC_Email__c.field-meta.xml
<CustomField>
    <fullName>Campaign_POC_Email__c</fullName>
    <label>Campaign POC Email</label>
    <type>Email</type>
</CustomField>