force-app/main/default/objects/Opportunity/fields/Client_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Client_Due_Date__c</fullName>
    <label>Client Due Date</label>
    <type>Date</type>
</CustomField>