force-app/main/default/objects/Opportunity/fields/Do_you_need_POS__c.field-meta.xml
<CustomField>
    <fullName>Do_you_need_POS__c</fullName>
    <label>Do you need POS</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>