force-app/main/default/objects/Opportunity/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Clients email</description>
    <label>Email</label>
    <length>70</length>
    <type>Text</type>
</CustomField>