force-app/main/default/objects/Opportunity/fields/Est_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Est_Ship_Date__c</fullName>
    <label>Est. Ship Date</label>
    <type>Date</type>
</CustomField>