force-app/main/default/objects/Opportunity/fields/Estimate_Change_Status__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Change_Status__c</fullName>
    <label>Estimate Change Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>