force-app/main/default/objects/Opportunity/fields/Estimate_Number__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Number__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>QBO Estimate Number</inlineHelpText>
    <label>Estimate Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>