force-app/main/default/objects/Opportunity/fields/Estimate_Number_For_Template__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Number_For_Template__c</fullName>
    <label>Estimate Number For Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>