force-app/main/default/objects/Opportunity/fields/Estimate_QB_Id__c.field-meta.xml
<CustomField>
    <fullName>Estimate_QB_Id__c</fullName>
    <label>Estimate QB Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>