force-app/main/default/objects/Opportunity/fields/Estimated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Amount__c</fullName>
    <description
  >Estimated Amount Value Copied from the Lead or Input pending Needs Assessment and Product Identification</description>
    <label>Estimated Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>