force-app/main/default/objects/Opportunity/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <description
  >Use this field to add specfic event requests for new EME Distributor or Supplier Leads</description>
    <label>Event Name</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName
        >EME Exclusive #1 February 25-28, 2024, Embassy Suites Deerfield Beach Resort &amp; Spa, Deerfield Beach, FL</fullName>
                <label
        >EME Exclusive #1 February 25-28, 2024, Embassy Suites Deerfield Beach Resort &amp; Spa, Deerfield Beach, FL</label>
            </value>
            <value>
                <fullName
        >EME Exclusive #2 May 5-8, 2024, Embassy Suites by Hilton St Augustine Beach Oceanfront Resort, St. Augustine, FL</fullName>
                <label
        >EME Exclusive #2 May 5-8, 2024, Embassy Suites by Hilton St Augustine Beach Oceanfront Resort, St. Augustine, FL</label>
            </value>
            <value>
                <fullName
        >EME Team Solutions June 23-25, 2024, Embassy Suites by Hilton Boulder, Boulder, CO</fullName>
                <label
        >EME Team Solutions June 23-25, 2024, Embassy Suites by Hilton Boulder, Boulder, CO</label>
            </value>
            <value>
                <fullName
        >EME Exclusive #3 August 4-7, 2024, Westgate Park City Resort &amp; Spa, Park City, UT</fullName>
                <label
        >EME Exclusive #3 August 4-7, 2024, Westgate Park City Resort &amp; Spa, Park City, UT</label>
            </value>
            <value>
                <fullName
        >EME Exclusive #4 September 15-18, 2024, Zachari Dunes on Mandalay Beach, Curio Collection by Hilton, Oxnard, CA</fullName>
                <label
        >EME Exclusive #4 September 15-18, 2024, Zachari Dunes on Mandalay Beach, Curio Collection by Hilton, Oxnard, CA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>