force-app/main/default/objects/Opportunity/fields/Expration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expration_Date__c</fullName>
    <description>Date that estimate expires</description>
    <label>Expration Date</label>
    <type>Date</type>
</CustomField>