force-app/main/default/objects/Opportunity/fields/HIC_ShopifySync__Billing_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>HIC_ShopifySync__Billing_Customer_Name__c</fullName>
    <label>Billing Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>