force-app/main/default/objects/Opportunity/fields/HIC_ShopifySync__Cancelled_Reason__c.field-meta.xml
<CustomField>
    <fullName>HIC_ShopifySync__Cancelled_Reason__c</fullName>
    <label>Cancelled Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>