force-app/main/default/objects/Opportunity/fields/HIC_ShopifySync__Cencelled_at__c.field-meta.xml
<CustomField>
    <fullName>HIC_ShopifySync__Cencelled_at__c</fullName>
    <label>Cancelled at</label>
    <type>DateTime</type>
</CustomField>