force-app/main/default/objects/Opportunity/fields/HIC_ShopifySync__Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>HIC_ShopifySync__Payment_Status__c</fullName>
    <label>Payment Status</label>
    <type>TextArea</type>
</CustomField>