force-app/main/default/objects/Opportunity/fields/HIC_ShopifySync__TrackingNumber__c.field-meta.xml
<CustomField>
    <fullName>HIC_ShopifySync__TrackingNumber__c</fullName>
    <label>Tracking Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>