force-app/main/default/objects/Opportunity/fields/How_did_you_hear_about_EME__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_hear_about_EME__c</fullName>
    <label>How did you hear about EME?</label>
    <type>TextArea</type>
</CustomField>