force-app/main/default/objects/Opportunity/fields/In_Hands_Date__c.field-meta.xml
<CustomField>
    <fullName>In_Hands_Date__c</fullName>
    <label>In Hands Date</label>
    <type>Date</type>
</CustomField>