force-app/main/default/objects/Opportunity/fields/Industry_Number__c.field-meta.xml
<CustomField>
    <fullName>Industry_Number__c</fullName>
    <description
  >This is an industry identiying number (ASI, PPAI, SAGE, or Other)</description>
    <externalId>true</externalId>
    <inlineHelpText
  >This is an industry identiying number (ASI, PPAI, SAGE, or Other)</inlineHelpText>
    <label>Industry Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>