force-app/main/default/objects/Opportunity/fields/isOutdated__c.field-meta.xml
<CustomField>
    <fullName>isOutdated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isOutdated?</label>
    <type>Checkbox</type>
</CustomField>