force-app/main/default/objects/Opportunity/fields/Lead_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_Record_Id__c</fullName>
    <label>Lead Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>