force-app/main/default/objects/Opportunity/fields/Legal_Billing_Address_PFA__c.field-meta.xml
<CustomField>
    <fullName>Legal_Billing_Address_PFA__c</fullName>
    <label>Legal Billing Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>