force-app/main/default/objects/Opportunity/fields/Legal_Company_Name_PFA__c.field-meta.xml
<CustomField>
    <fullName>Legal_Company_Name_PFA__c</fullName>
    <label>Legal Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>