force-app/main/default/objects/Opportunity/fields/Logistics_Material_Coordination__c.field-meta.xml
<CustomField>
    <fullName>Logistics_Material_Coordination__c</fullName>
    <label>Logistics/Material Coordination</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>