force-app/main/default/objects/Opportunity/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <label>Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>