force-app/main/default/objects/Opportunity/fields/Markets__c.field-meta.xml
<CustomField>
    <fullName>Markets__c</fullName>
    <label>Market(s)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>