force-app/main/default/objects/Opportunity/fields/Message_PFA__c.field-meta.xml
<CustomField>
    <fullName>Message_PFA__c</fullName>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>