force-app/main/default/objects/Opportunity/fields/Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Date__c</fullName>
    <description>When do you plan on placing this order? 
Used to potentially drive Opportunity Close Date</description>
    <inlineHelpText>When do you plan on placing this order?</inlineHelpText>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>