force-app/main/default/objects/Opportunity/fields/Organization_Address_PFA__c.field-meta.xml
<CustomField>
    <fullName>Organization_Address_PFA__c</fullName>
    <label>Organization Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>