force-app/main/default/objects/Opportunity/fields/Organization_Name_PFA__c.field-meta.xml
<CustomField>
    <fullName>Organization_Name_PFA__c</fullName>
    <label>Organization Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>