force-app/main/default/objects/Opportunity/fields/Overdue__c.field-meta.xml
<CustomField>
    <fullName>Overdue__c</fullName>
    <description>Indicates whether the opportunity is overdue.
Overdue is classified as &apos;Open and Close date is in the past&apos;</description>
    <formula
  >IF( IsClosed = FALSE &amp;&amp; CloseDate &lt; TODAY(), TRUE, FALSE )</formula>
    <inlineHelpText
  >Indicates whether the opportunity is overdue</inlineHelpText>
    <label>Overdue?</label>
    <type>Checkbox</type>
</CustomField>