force-app/main/default/objects/Opportunity/fields/Panda_Doc_Id__c.field-meta.xml
<CustomField>
    <fullName>Panda_Doc_Id__c</fullName>
    <label>Panda Doc Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>