force-app/main/default/objects/Opportunity/fields/PFA_Campaign__c.field-meta.xml
<CustomField>
    <fullName>PFA_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PFA Campaign</label>
    <referenceTo>PFA_Campaign__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>