force-app/main/default/objects/Opportunity/fields/PFA_Representative__c.field-meta.xml
<CustomField>
    <fullName>PFA_Representative__c</fullName>
    <label>PFA Representative</label>
    <length>30</length>
    <type>Text</type>
</CustomField>