force-app/main/default/objects/Opportunity/fields/Preferred_Payment_Method_PFA__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Payment_Method_PFA__c</fullName>
    <label>Preferred Payment Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>ACH Transfer</fullName>
            </value>
            <value>
                <fullName>Wire Transfer</fullName>
            </value>
            <value>
                <fullName>Bill.com</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>