force-app/main/default/objects/Opportunity/fields/Presentation_Style__c.field-meta.xml
<CustomField>
    <fullName>Presentation_Style__c</fullName>
    <label>Presentation Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tiles</fullName>
            </value>
            <value>
                <fullName>List</fullName>
            </value>
            <value>
                <fullName>Gallery</fullName>
            </value>
            <value>
                <fullName>Smart Gallery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>