force-app/main/default/objects/Opportunity/fields/Program_Description__c.field-meta.xml
<CustomField>
    <fullName>Program_Description__c</fullName>
    <label>Program Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>