force-app/main/default/objects/Opportunity/fields/Promoted_Sampled_Products_Brands__c.field-meta.xml
<CustomField>
    <fullName>Promoted_Sampled_Products_Brands__c</fullName>
    <label>Promoted/Sampled Product(s)/Brand(s)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>