force-app/main/default/objects/Opportunity/fields/Responsible_for_Scheduling__c.field-meta.xml
<CustomField>
    <fullName>Responsible_for_Scheduling__c</fullName>
    <label>Responsible for Scheduling</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>