force-app/main/default/objects/Opportunity/fields/Scheduling_Events_Account_Venue_s__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Events_Account_Venue_s__c</fullName>
    <label>Scheduling Events Account/Venue(s)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>