force-app/main/default/objects/Opportunity/fields/Ship_via__c.field-meta.xml
<CustomField>
    <fullName>Ship_via__c</fullName>
    <label>Ship via</label>
    <length>70</length>
    <type>Text</type>
</CustomField>