force-app/main/default/objects/Opportunity/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <label>Shipping Address</label>
    <type>Address</type>
</CustomField>