force-app/main/default/objects/Opportunity/fields/Shipping_To__c.field-meta.xml
<CustomField>
    <fullName>Shipping_To__c</fullName>
    <description>Shipping address</description>
    <label>Shipping To</label>
    <type>TextArea</type>
</CustomField>