force-app/main/default/objects/Opportunity/fields/Show_Generate_Approved_SOW__c.field-meta.xml
<CustomField>
    <fullName>Show_Generate_Approved_SOW__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Generate Approved SOW</label>
    <type>Checkbox</type>
</CustomField>