force-app/main/default/objects/Opportunity/fields/Signor_Email_PFA__c.field-meta.xml
<CustomField>
    <fullName>Signor_Email_PFA__c</fullName>
    <label>Signor Email</label>
    <type>Email</type>
</CustomField>