force-app/main/default/objects/Opportunity/fields/Signor_Name_PFA__c.field-meta.xml
<CustomField>
    <fullName>Signor_Name_PFA__c</fullName>
    <label>Signor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>