force-app/main/default/objects/Opportunity/fields/Signor_Title_PFA__c.field-meta.xml
<CustomField>
    <fullName>Signor_Title_PFA__c</fullName>
    <label>Signor Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>