force-app/main/default/objects/Opportunity/fields/SLA_Expiration_Date_PFA__c.field-meta.xml
<CustomField>
    <fullName>SLA_Expiration_Date_PFA__c</fullName>
    <label>SLA Expiration Date</label>
    <type>Date</type>
</CustomField>