force-app/main/default/objects/Opportunity/fields/SLA_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>SLA_Start_Date__c</fullName>
    <label>SLA Start Date</label>
    <type>Date</type>
</CustomField>