force-app/main/default/objects/Opportunity/fields/SOW_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>SOW_Approval_Date__c</fullName>
    <label>SOW Approval Date</label>
    <type>Date</type>
</CustomField>