force-app/main/default/objects/Opportunity/fields/SOW_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>SOW_Effective_Date__c</fullName>
    <label>SOW Effective Date</label>
    <type>Date</type>
</CustomField>