force-app/main/default/objects/Opportunity/fields/Summary_of_Materials__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_Materials__c</fullName>
    <label>Summary of Materials</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>