force-app/main/default/objects/Opportunity/fields/Total_Hourly_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Hourly_Cost__c</fullName>
    <label>Total Hourly Cost</label>
    <summarizedField>Hourly_Estimate__c.Total__c</summarizedField>
    <summaryForeignKey>Hourly_Estimate__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>