force-app/main/default/objects/Opportunity/fields/Total_Miscellaneous_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Miscellaneous_Cost__c</fullName>
    <label>Total Miscellaneous Cost</label>
    <summarizedField>Expenses_Miscellaneous__c.Total__c</summarizedField>
    <summaryForeignKey
  >Expenses_Miscellaneous__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>