force-app/main/default/objects/Opportunity/fields/Total_Program_Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Program_Estimated_Cost__c</fullName>
    <formula>Total_Hourly_Cost__c  +  Total_Miscellaneous_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Program Estimated Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>