force-app/main/default/objects/Opportunity/fields/Tracking_No__c.field-meta.xml
<CustomField>
    <fullName>Tracking_No__c</fullName>
    <label>Tracking No</label>
    <length>25</length>
    <type>Text</type>
</CustomField>