force-app/main/default/objects/Opportunity/fields/Training_Details_Logistics__c.field-meta.xml
<CustomField>
    <fullName>Training_Details_Logistics__c</fullName>
    <label>Training Details &amp; Logistics</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>