force-app/main/default/objects/Opportunity/fields/Turnaround_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Turnaround_Due_Date__c</fullName>
    <description
  >Used to help indicate a potential Opportunity Due Date</description>
    <inlineHelpText>When do you need these in hand?</inlineHelpText>
    <label>Turnaround Due Date</label>
    <type>Date</type>
</CustomField>