force-app/main/default/objects/Opportunity/fields/Urgency_Status__c.field-meta.xml
<CustomField>
    <fullName>Urgency_Status__c</fullName>
    <formula
  >IF( ISPICKVAL(Priority__c,&apos;Rush&apos;), IMAGE(&quot;/resource/UrgencyStatus/RUSH.jpg&quot;, &apos;Rush&apos;, 35, 100),

IF(ISPICKVAL(Priority__c,&apos;Firm&apos;), IMAGE(&quot;/resource/UrgencyStatus/FIRM.jpg&quot;, &apos;Firm&apos;, 35, 100),

&apos;&apos;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Urgency Status</label>
    <type>Text</type>
</CustomField>