force-app/main/default/objects/Opportunity/fields/WorkOrder_Number_For_Template__c.field-meta.xml
<CustomField>
    <fullName>WorkOrder_Number_For_Template__c</fullName>
    <label>WorkOrder Number For Template</label>
    <length>200</length>
    <type>Text</type>
</CustomField>