force-app/main/default/objects/Opportunity/recordTypes/Default_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Default_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Default Sales Process</businessProcess>
    <label>Default Opportunity</label>
</RecordType>