force-app/main/default/objects/Opportunity/recordTypes/EME_Distributor_Booking_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>EME_Distributor_Booking_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Default Sales Process</businessProcess>
    <label>EME Distributor Booking Opportunity</label>
</RecordType>