force-app/main/default/objects/Opportunity/recordTypes/EME_Vendor_Booking_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>EME_Vendor_Booking_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Default Sales Process</businessProcess>
    <label>EME Vendor Booking Opportunity</label>
</RecordType>