force-app/main/default/objects/Opportunity/recordTypes/PFA_Customer_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>PFA_Customer_Opportunity</fullName>
    <active>true</active>
    <businessProcess>PFA Sales Process</businessProcess>
    <label>PFA Customer Opportunity</label>
</RecordType>