force-app/main/default/objects/Opportunity/validationRules/Do_Not_Close_Without_Estimated_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_Not_Close_Without_Estimated_Amount</fullName>
    <active>false</active>
    <description
  >You must fill in a Estimated Amount to Close an Opportunity</description>
    <errorConditionFormula
  >ISBLANK(Estimated_Amount__c) &amp;&amp;  IsClosed</errorConditionFormula>
    <errorMessage
  >You must enter an Estimated Amount to Close an Opportunity</errorMessage>
</ValidationRule>