force-app/main/default/objects/Opportunity/validationRules/DoNotCreateOnStageOtherThanNeedAnalysis.validationRule-meta.xml
<ValidationRule>
    <fullName>DoNotCreateOnStageOtherThanNeedAnalysis</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(),
NOT(ISPICKVAL(StageName, &quot;Needs Analysis&quot;))
)</errorConditionFormula>
    <errorMessage
  >You cannot select any stage except &apos;Needs Analysis&apos;</errorMessage>
</ValidationRule>