force-app/main/default/objects/Opportunity/listViews/Ashleigh_s_Opportunities.listView-meta.xml
<ListView>
    <fullName>Ashleigh_s_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
    <columns>Opportunity_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Lesley</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Needs Analysis,Presentation,Estimate,Sales</value>
    </filters>
    <label>Lesley&apos;s Opportunities</label>
</ListView>